fixed overflow and visibility issues on very small page sizes (x: 128px-224px, y: 256px-320px)

--- a/mobile.css
+++ b/mobile.css
@@ -1,5 +1,4 @@
 @media (max-device-width: 1024px) {
-
 .icon {
   height: 48px;
   width: 48px;
@@ -11,14 +10,24 @@
   right: 12px;
   top: auto;
 }
-
 }
 
 @media (max-width: 512px) {
-
 .btn-icon {
   bottom: 6px;
   top: auto;
 }
+}
 
+@media (max-device-width: 1024px) and (max-width: 224px) {
+.icon {
+  height: 16px;
+  width: 16px;
+}
+
+.btn-icon {
+  bottom: 6px;
+  padding: 6px;
+  right: 8px;
+}
 }
